[package]
name = "lethal-nd"
version = "0.1.0"
edition = "2024"

[lib]
name = "lethallib"
path = "src/lib.rs"

[dependencies]
mathnd = { git = "https://github.com/ashandelle/mathnd.git" }
macroquad = "0.4.14"
renet = "2.0.0"
renet_netcode = "2.0.0"
renet_steam = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
steamworks = "0.12.2"
num-traits = "0.2.19"
bincode = "2.0.1"
bytes = { version = "1.11.1", features = ["serde"] }
derive-debug = "0.1.2"
rayon = "1.12.0"
